--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>2.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>9.8.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
